--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>Design Your Tesla Model Y</title>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Tesla" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <!-- Top Bar -->
@@ -36,7 +42,7 @@
         <div class="sticky top-24">
           <!-- Exterior Image -->
           <div
-            class="h-38 flex items-center justify-center overflow-hidden mb-4"
+            class="h-full flex items-center justify-center overflow-hidden mb-4"
           >
             <img
               src="./images/model-y-stealth-grey.jpg"
@@ -48,7 +54,7 @@
 
           <!-- Interior Image -->
           <div
-            class="h-38 flex items-center justify-center overflow-hidden mb-4"
+            class="h-full flex items-center justify-center overflow-hidden mb-4"
           >
             <img
               src="./images/model-y-interior-dark.jpg"
